# amr_repo

amr_bringup/: CMakeLists.txt  package.xml
amr_bringup/launch/: bringup.launch
amr_control/: package.xml
amr_control/config/: amr_control.yaml
amr_control/launch/: amr_control.launch
amr_custom_interfaces/: CMakeLists.txt  package.xml
amr_custom_interfaces/msg/: EncoderData.msg  WheelVelCmd.msg
amr_custom_interfaces/srv/: MapNavigationGoal.srv
amr_description/: package.xml
amr_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch  urdf.rviz
amr_description/meshes/: link_10_1.stl  link_1_1.stl  link_2_1.stl  link_3_1.stl  link_4_1.stl  link_5_1.stl  link_6_1.stl  link_7_1.stl  link_8_1.stl  link_9_1.stl
amr_description/urdf/: amr.gazebo  amr.trans  amr.xacro  amr_simple.xacro  amr_simply.xacro  materials.xacro
amr_gui/: CMakeLists.txt  package.xml
amr_gui/include/amr_gui/: defs.hpp  main_window.hpp  map_points_widget.hpp  robot_info_widget.hpp  ros_comm.hpp
amr_gui/src/: main.cpp  main_window.cpp  map_points_widget.cpp  robot_info_widget.cpp  ros_comm.cpp
amr_hardware/: CMakeLists.txt  package.xml
amr_hardware/arduino/: amr_hw.ino
amr_hardware/include/: amr_hardware_interface.hpp
amr_hardware/src/: amr_hardware_interface.cpp
amr_localization/: CMakeLists.txt  package.xml
amr_navigation/: CMakeLists.txt  package.xml
amr_navigation/launch/: amr_navigation.launch
amr_navigation/params/: base_local_planner.yaml  costmap_common.yaml  dwa_local_planner.yaml  global_costmap.yaml  local_costmap.yaml
amr_navigation/src/: base_goal.cpp  map_goal.cpp
amr_simulation/: CMakeLists.txt  package.xml
amr_simulation/launch/: simulation.launch
