<?xml version="1.0"?>
<package format="2">
  <name>amr_custom_interfaces</name>
  <version>0.0.0</version>
  <description>The amr_custom_interfaces package</description>
  <maintainer email="naci@todo.todo">naci</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>

  </export>
</package>
