<?xml version="1.0"?>
<package format="2">
  <name>amr_gui</name>
  <version>0.0.0</version>
  <description>The amr_gui package</description>
  <maintainer email="naci@todo.todo">naci</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>rviz</build_depend>
  <exec_depend>rviz</exec_depend>

  <build_depend>sensor_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <build_depend>amr_custom_interfaces</build_depend>
  <exec_depend>amr_custom_interfaces</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
