<?xml version="1.0"?>
<package format="2">
  <name>amr_hardware</name>
  <version>0.0.0</version>
  <description>The amr_hardware package</description>
  <maintainer email="naci@todo.todo">naci</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>hardware_interface</build_depend>
  <exec_depend>hardware_interface</exec_depend>

  <build_depend>controller_manager</build_depend>
  <exec_depend>controller_manager</exec_depend>

  <build_depend>realtime_tools</build_depend>
  <exec_depend>realtime_tools</exec_depend>

  <build_depend>amr_custom_interfaces</build_depend>
  <exec_depend>amr_custom_interfaces</exec_depend>

  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>

  </export>
</package>
