<?xml version="1.0"?>
<package format="2">
  <name>amr_navigation</name>
  <version>0.0.0</version>
  <description>The amr_navigation package</description>

  <maintainer email="naci@todo.todo">naci</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>actionlib</build_depend>
  <exec_depend>actionlib</exec_depend>

  <build_depend>move_base_msgs</build_depend>
  <exec_depend>move_base_msgs</exec_depend>

  <build_depend>amr_custom_interfaces</build_depend>
  <exec_depend>amr_custom_interfaces</exec_depend>

  <export>


  </export>
</package>
