<?xml version="1.0"?>
<package format="2">
  <name>amr_simulation</name>
  <version>0.0.0</version>
  <description>The amr_simulation package</description>

  <maintainer email="naci@todo.todo">naci</maintainer>

  <license>TODO</license>


  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_ros</build_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
